[package]
name = "agent-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.38", features = ["derive"] }
dirs = "6.0.0"
fastembed = { version = "5.13.1", default-features = false, features = ["ort-download-binaries-rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = "1.1.2"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"
