[package]
name = "agent-exporter"
version = "0.1.5"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["json"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.38", features = ["derive"] }
dirs = "6.0.0"
fastembed = { version = "5.13.1", default-features = false, features = ["ort-download-binaries-rustls-tls"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = "1.1.2"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread"] }
webbrowser = "1.0.6"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"
ureq = { version = "3.1.2", features = ["json"] }
